livros/Kubernetes -  tudo sobre orquestração de containeres/api-pod/pod-manifest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    app: simple-api
    commit: 982992sse
    project: estudo
spec:
  containers:
    - name: simple-api
      image: vtnorton/simple-node-api
      resources:
        requests:
          cpu: 100m
          memory: 128M
        limits:
          cpu: 250m
          memory: 256M
      ports:
        - name: porta-api
          containerPort: 8083
