livros/Kubernetes -  tudo sobre orquestração de containeres/api-pod/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pod-service
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30526
      targetPort: porta-api
